--- a/common/style.css
+++ b/common/style.css
@@ -1,192 +1,269 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap");
-/*===== VARIABLES CSS Y SASS =====*/
-/*Varibles sass*/
-/*Variables css*/
-/*===== Colores =====*/
-:root {
-  --first-color: #12192c;
-  --second-color: #f5a623;
-  --white-color: #ededed;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-/*===== Fuente y tipografia =====*/
+/* CSS VARIABLES */
 :root {
-  --body-font: "Quicksand", sans-serif;
-  --small-font-size: 0.875rem;
-}
+  --header-height: 3.5rem;
+  --nav-width: 219px;
 
-@media screen and (min-width: 768px) {
-  :root {
-    --small-font-size: 0.938rem;
-  }
-}
+  --first-color: #6923d0;
+  --first-light-color: #f4f0fa;
+  --title-color: #19181b;
+  --text-color: #58555e;
+  --text-color-light: #a5a1aa;
+  --body-color: #f9f6fd;
+  --container-color: #ffffff;
 
-/*===== z index =====*/
-:root {
-  --z-back: -10;
-  --z-normal: 1;
-  --z-tooltip: 10;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.75rem;
+  --smaller-font-size: 0.75rem;
+
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
   --z-fixed: 100;
-  --z-modal: 1000;
 }
 
-/*===== BASE =====*/
-*,
-::before,
-::after {
-  -webkit-box-sizing: border-box;
+* {
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-  position: relative;
-  margin: 0;
-  padding: 1rem 0 0 5rem;
-  font-family: var(--body-font);
-  background-color: var(--white-color);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  margin: var(--header-height) 0 0 0;
+  padding: 1rem 1rem 0;
+  font-size: var(--normal-font-size);
+  background-color: var(--body-color);
+  color: var(--text-color);
 }
 
-h1 {
+h3 {
   margin: 0;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
 
 a {
   text-decoration: none;
 }
 
-/*=====  NAV =====*/
-.l-navbar {
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.header {
   position: fixed;
   top: 0;
   left: 0;
-  width: 56px;
-  height: 100vh;
-  background-color: var(--first-color);
-  padding: 1.25rem 0.5rem 2rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  width: 100%;
+  background-color: var(--container-color);
+  box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
+  padding: 0 1rem;
   z-index: var(--z-fixed);
 }
 
-.nav {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.header__container {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  overflow: hidden;
-}
-
-.nav__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 2rem;
-  padding: 0 0.5rem;
+  height: var(--header-height);
 }
 
-.nav__logo-icon {
-  margin-right: 1.2rem;
-}
-
-.nav__logo-text {
-  color: var(--white-color);
-  font-weight: 700;
-}
-
-.nav__toggle {
-  position: absolute;
-  top: 1.1rem;
-  right: -0.6rem;
-  width: 18px;
-  height: 18px;
-  background-color: var(--second-color);
+.header__img {
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
-  font-size: 1.25rem;
-  color: var(--first-color);
-  display: -webkit-box;
-  display: -ms-flexbox;
+}
+
+.header__logo {
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  display: none;
+}
+
+.header__search {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  padding: 0.4rem 0.75rem;
+  background-color: var(--first-light-color);
+  border-radius: 0.25rem;
+}
+
+.header__input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: var(--first-light-color);
+}
+
+.header__input::placeholder {
+  color: var(--text-color);
+}
+
+.header__toggle,
+.header__icon {
+  font-size: 1.2rem;
+}
+
+.header__toggle {
+  color: var(--title-color);
   cursor: pointer;
-  -webkit-transition: 0.5s;
+}
+
+.nav {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  height: 100vh;
+  padding: 1rem;
+  background-color: var(--container-color);
+  box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1);
+  z-index: var(--z-fixed);
   transition: 0.5s;
 }
 
-.nav__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.nav__container {
+  height: 100%;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+  scrollbar-width: none;
+}
+
+.nav__container::-webkit-scrollbar,
+.nav::-webkit-scrollbar {
+  display: none;
+}
+
+.nav__logo {
+  font-weight: var(--font-semi-bold);
+  margin-bottom: 2.5rem;
+}
+
+.nav__list,
+.nav__items {
+  display: grid;
+}
+
+.nav__list {
+  row-gap: 2.5rem;
+  margin: 30px 0;
+}
+
+.nav__items {
+  row-gap: 1.5rem;
+}
+
+.nav__subtitle {
+  font-size: var(--normal-font-size);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  color: var(--text-color-light);
+}
+
+.nav__link {
+  display: flex;
   align-items: center;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border-radius: 0.5rem;
-  color: var(--white-color);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  color: var(--text-color);
 }
 
 .nav__link:hover {
-  background-color: var(--second-color);
   color: var(--first-color);
 }
 
 .nav__icon {
-  font-size: 1.5rem;
-  margin-right: 1rem;
+  font-size: 1.2rem;
+  margin-right: 0.5rem;
 }
 
-.nav__text {
-  font-weight: 700;
+.nav__name {
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  white-space: nowrap;
 }
 
-/*Show menu*/
-.show {
-  width: 168px;
+.nav__logout {
+  margin-top: 5rem;
 }
 
-/*Rotate toggle*/
-.rotate {
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+.nav.show-menu {
+  left: 0;
 }
 
-/*Active links menu*/
 .active {
-  background-color: var(--second-color);
   color: var(--first-color);
 }
 
-/*Add padding body*/
-.expander {
-  padding: 1rem 0 0 12rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+@media screen and (min-width: 320px) {
+  .header__search {
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    padding: 1rem 3rem 0 6rem;
+  }
+
+  .header {
+    padding: 0 3rem 0 6rem;
+  }
+
+  .header__container {
+    height: calc(var(--header-height) + 0.5rem);
+  }
+
+  .header__search {
+    width: 300px;
+    padding: 0.55rem 0.75rem;
+  }
+
+  .header__toggle {
+    display: none;
+  }
+
+  .header__logo {
+    display: block;
+  }
+
+  .header__img {
+    width: 40px;
+    height: 40px;
+    order: 1;
+  }
+
+  .nav {
+    left: 0;
+    padding: 1.2rem 1.5rem 3rem;
+    width: 78px;
+  }
+
+  .nav__items {
+    row-gap: 1.7rem;
+  }
+
+  .nav__icon {
+    font-size: 1.3rem;
+  }
+
+  .nav__logo-name,
+  .nav__name,
+  .nav__subtitle {
+    opacity: 0;
+    transition: 0.3s;
+  }
+
+  .nav:hover {
+    width: var(--nav-width);
+  }
+
+  .nav:hover .nav__logo-name {
+    opacity: 1;
+  }
+
+  .nav:hover .nav__name {
+    opacity: 1;
+  }
+
+  .nav:hover .nav__subtitle {
+    opacity: 1;
+  }
 }
