--- a/common/style.css
+++ b/common/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merienda&family=Poppins:wght@400;500;600&display=swap");
 
 /* CSS VARIABLES */
 :root {
@@ -10,7 +10,7 @@
   --title-color: #19181b;
   --text-color: #58555e;
   --text-color-light: #a5a1aa;
-  --body-color: #f9f6fd;
+  --body-color: #fff;
   --container-color: #ffffff;
 
   --normal-font-size: 0.938rem;
@@ -32,7 +32,7 @@ body {
   margin: var(--header-height) 0 0 0;
   padding: 1rem 1rem 0;
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
+  background-color: #fff;
   color: var(--text-color);
 }
 
@@ -54,7 +54,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--container-color);
+  background: var(--body-color);
   box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
   padding: 0 1rem;
   z-index: var(--z-fixed);
@@ -82,7 +82,7 @@ img {
 .header__search {
   display: flex;
   padding: 0.4rem 0.75rem;
-  background-color: var(--first-light-color);
+  background-color: #fff;
   border-radius: 0.25rem;
 }
 
@@ -90,11 +90,12 @@ img {
   width: 100%;
   border: none;
   outline: none;
-  background-color: var(--first-light-color);
+  background-color: #fff;
 }
 
 .header__input::placeholder {
   color: var(--text-color);
+  font-size: 16px;
 }
 
 .header__toggle,
@@ -113,7 +114,7 @@ img {
   left: -100%;
   height: 100vh;
   padding: 1rem;
-  background-color: var(--container-color);
+  background-color: var(--body-color);
   box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1);
   z-index: var(--z-fixed);
   transition: 0.5s;
@@ -170,18 +171,14 @@ img {
 }
 
 .nav__icon {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   margin-right: 0.5rem;
 }
 
 .nav__name {
-  font-size: var(--small-font-size);
+  font-size: 16px;
   font-weight: var(--font-medium);
   white-space: nowrap;
-}
-
-.nav__logout {
-  margin-top: 5rem;
 }
 
 .nav.show-menu {
@@ -190,6 +187,240 @@ img {
 
 .active {
   color: var(--first-color);
+  font-weight: bold;
+}
+
+.nav__logo-name {
+  font-size: 20px;
+  margin-left: 5px;
+}
+
+.page__name {
+  font-size: 22px;
+  align-items: center;
+}
+
+.logo {
+  font-family: "Merienda", cursive;
+  letter-spacing: 2px;
+  font-size: 17.5px;
+  color: #fff;
+  background-color: rgb(54, 54, 197);
+  padding: 4px 6px;
+  text-align: center;
+  font-weight: 600;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+
+.text__color,
+.nav__name,
+.nav__icon {
+  color: #fff;
+}
+
+.header {
+  /* background: #d82e2f; */
+  background: linear-gradient(to right, #ff4331, #d31a50);
+  /* background: linear-gradient(to right, #00bc40, #4c3ae3); */
+}
+
+.nav {
+  background: linear-gradient(to left, #ff4331, #d31a50);
+}
+
+.nav__link:hover {
+  color: var(--first-color);
+}
+
+/* main body */
+
+.card__container {
+  position: relative;
+  max-height: 85vh;
+  /* margin: 5px 15px; */
+  width: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  overflow-y: auto;
+  background-color: var(--body-color);
+}
+
+.card__container::-webkit-scrollbar {
+  display: none;
+}
+
+.card__container .card {
+  border-radius: 5px;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  margin: 5px 5px;
+  line-height: 1.5;
+  font-size: 0.9em;
+  padding: 15px;
+}
+
+.card__container .card .card__details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card__container .add__icon {
+  position: fixed;
+  top: 85%;
+  right: 5%;
+  height: 60px;
+  width: 60px;
+  background: linear-gradient(to right, #ff4331, #d31a50);
+  border-radius: 50%;
+}
+
+.add__icon .fa-plus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 60px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.trash__icon {
+  margin-top: 7px;
+  font-size: 22px;
+  color: crimson;
+  cursor: pointer;
+}
+
+.card .card__header {
+  font-size: 20px;
+  color: #000;
+  line-height: 1.2;
+}
+
+.card > h4:first-of-type {
+  margin-top: 0;
+}
+
+.card > h4:last-of-type {
+  margin-top: 0;
+}
+
+.card > p:last-of-type {
+  margin-bottom: 0;
+}
+
+.card > p:first-of-type {
+  margin-top: 0;
+}
+
+.card .card__msg {
+  max-height: 150px;
+  overflow-x: auto;
+  font-size: 14px;
+  color: #000;
+}
+
+.card .card__msg::-webkit-scrollbar {
+  display: none;
+}
+
+.card .card__details .teacher {
+  font-size: 16px;
+  color: #6923d0;
+  font-weight: bold;
+}
+
+.card .card__details .download__pdf {
+  border: none;
+  outline: none;
+  padding: 8px 10px;
+  background-color: crimson;
+  font-size: 16px;
+  color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* MODAL */
+
+.modal__form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: auto;
+  width: 40%;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  padding: 20px 25px;
+  z-index: 102;
+}
+
+.modal__form h3 {
+  font-size: 23px;
+  font-weight: 500;
+  color: #d31a50;
+}
+
+.modal__form .form__control {
+  display: flex;
+  margin-bottom: 12px;
+  flex-direction: column;
+}
+
+.modal__form form label {
+  font-size: 18px;
+  color: #000;
+}
+
+.modal__form form select,
+.modal__form form input,
+.modal__form form textarea {
+  padding: 5px 6px;
+  border: none;
+  outline: none;
+  background-color: #e9e2e2;
+  font-size: 17px;
+  resize: none;
+}
+
+.modal__form .close__heading {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.modal__form form .post__button {
+  outline: none;
+  border: none;
+  background: crimson;
+  color: #fff;
+  padding: 10px 12px;
+  border-radius: 5px;
+}
+
+#closeButton {
+  font-size: 22px;
+  color: red;
+  cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 101;
+}
+
+.hidden {
+  display: none;
 }
 
 @media screen and (min-width: 320px) {
@@ -233,7 +464,7 @@ img {
   .nav {
     left: 0;
     padding: 1.2rem 1.5rem 3rem;
-    width: 78px;
+    width: 85px;
   }
 
   .nav__items {
@@ -265,5 +496,46 @@ img {
 
   .nav:hover .nav__subtitle {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 635px) {
+  .header__search {
+    display: none;
+  }
+
+  .card__container {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+
+  .modal__form {
+    height: auto;
+    width: 90% !important;
+  }
+}
+
+@media screen and (max-width: 1244px) {
+  .card__container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .modal__form {
+    height: auto;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .header__search {
+    display: none;
+  }
+
+  .modal__form {
+    height: auto;
+    width: 60%;
+  }
+
+  .card__container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
