--- a/common/style.css
+++ b/common/style.css
@@ -42,6 +42,7 @@ h3 {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 img {
@@ -447,6 +448,7 @@ img {
   cursor: pointer;
 }
 
+.overlay2,
 .overlay {
   position: absolute;
   top: 0;
@@ -666,7 +668,7 @@ img {
 
 @media screen and (max-width: 1130px) {
   .send__mail {
-    max-height: 500px;
+    max-height: 550px;
     overflow-y: auto;
   }
 
