--- a/common/style.css
+++ b/common/style.css
@@ -662,6 +662,10 @@ img {
     height: auto;
     width: 90% !important;
   }
+
+  .nav__icon {
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (max-width: 1244px) {
