--- a/common/forms.css
+++ b/common/forms.css
@@ -157,6 +157,15 @@ i.active::before {
   transform: rotate(180deg);
 }
 
+.notify {
+  margin: 10px 0;
+  padding: 10px 12px;
+  background-color: crimson;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #fff;
+}
+
 section .container .user .formBx form .logo {
   font-family: "Merienda", cursive;
   letter-spacing: 2px;
