--- a/common/style.css
+++ b/common/style.css
@@ -26,6 +26,7 @@
 * {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  /* font-family: 'Helvetica'; */
 }
 
 body {
@@ -224,15 +225,15 @@ img {
 /* SUB-MENU */
 .sub-menu {
   display: none;
-  margin-left: 68px;
+  margin-left: 32px;
 }
 
 .sub-menu .sub__menu__item {
+  display: flex;
+  align-items: center;
   color: #fff;
   font-weight: bold;
   font-size: 16px;
-  margin: 5px 0;
-  transition: all 1s ease-in;
 }
 
 .sub-menu.active {
@@ -244,7 +245,6 @@ img {
   font-size: 16px;
   font-weight: bold;
   content: "\f077";
-  transform: rotate(180deg);
 }
 
 .header {
@@ -325,9 +325,9 @@ img {
 }
 
 .card .card__header {
-  font-size: 20px;
+  font-size: 19.5px;
   color: #000;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 
 .card > h4:first-of-type {
@@ -643,7 +643,7 @@ img {
   }
 
   .nav__items {
-    row-gap: 1.7rem;
+    row-gap: 1.5rem;
   }
 
   .nav__icon {
