--- a/common/style.css
+++ b/common/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Merienda&family=Poppins:wght@400;500;600&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Merienda&family=Poppins:wght@400;500;600&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Merienda&family=Roboto:wght@300;400;500&display=swap");
 
 /* CSS VARIABLES */
 :root {
@@ -25,8 +26,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  /* font-family: 'Helvetica'; */
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -178,9 +178,10 @@ img {
 }
 
 .nav__name {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: var(--font-medium);
   white-space: nowrap;
+  letter-spacing: 0.5px;
 }
 
 .nav.show-menu {
@@ -196,11 +197,13 @@ img {
   font-size: 20px;
   margin-left: 5px;
   margin-top: 5px;
+  letter-spacing: 1px;
 }
 
 .page__name {
-  font-size: 22px;
+  font-size: 21px;
   align-items: center;
+  letter-spacing: 1px;
 }
 
 .logo {
@@ -248,9 +251,7 @@ img {
 }
 
 .header {
-  /* background: #d82e2f; */
   background: linear-gradient(to right, #ff4331, #d31a50);
-  /* background: linear-gradient(to right, #00bc40, #4c3ae3); */
 }
 
 .nav {
@@ -326,8 +327,10 @@ img {
 
 .card .card__header {
   font-size: 19.5px;
-  color: #000;
+  color: rgb(27, 22, 22);
   line-height: 1.3;
+  letter-spacing: 0.5px;
+  font-weight: 600;
 }
 
 .card > h4:first-of-type {
@@ -350,6 +353,8 @@ img {
   max-height: 150px;
   overflow-x: auto;
   font-size: 16px;
+  font-weight: 400;
+  hyphens: auto;
   color: #000;
 }
 
@@ -373,8 +378,17 @@ img {
 }
 
 .card .card__details .teacher {
-  font-size: 14px;
+  font-size: 15px;
+  letter-spacing: 0.5px;
   color: #6923d0;
+  font-weight: bold;
+  word-break: break-all;
+}
+
+.card .card__details .date {
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  color: var(--text-color);
   font-weight: bold;
   word-break: break-all;
 }
@@ -385,11 +399,11 @@ img {
   padding: 8px;
   background-color: crimson;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 500;
   color: #fff;
   border-radius: 10px;
   cursor: pointer;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
 
 .deleteIcon {
@@ -432,6 +446,7 @@ img {
   font-size: 18px;
   color: #000;
   font-weight: 500;
+  margin-bottom: 5px;
 }
 
 .send__mail .send__mail__container form input,
@@ -445,6 +460,16 @@ img {
   background-color: #e9e2e2;
   font-size: 17px;
   resize: none;
+}
+
+.showCharacters {
+  margin: 5px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.showCharacters #remainingCharacters {
+  color: crimson;
 }
 
 .send__mail .close__heading,
@@ -498,6 +523,7 @@ img {
   font-size: 22px;
   font-weight: bold;
   pointer-events: none;
+  letter-spacing: 0.5px;
 }
 
 /* SEND EMAIL POP-UP */
