--- a/common/style.css
+++ b/common/style.css
@@ -1,22 +1,15 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Merienda&family=Poppins:wght@400;500;600&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Merienda&family=Roboto:wght@300;400;500&display=swap");
 
 /* CSS VARIABLES */
+
 :root {
   --header-height: 3.5rem;
-  --nav-width: 219px;
+  --nav-width: 220px;
 
-  --first-color: #6923d0;
-  --first-light-color: #f4f0fa;
   --title-color: #19181b;
-  --text-color: #58555e;
+  --text-color: #464549;
   --text-color-light: #a5a1aa;
-  --body-color: #fff;
-  --container-color: #ffffff;
-
-  --normal-font-size: 0.938rem;
-  --small-font-size: 0.75rem;
-  --smaller-font-size: 0.75rem;
+  --white-color: #fff;
 
   --font-medium: 500;
   --font-semi-bold: 600;
@@ -32,9 +25,8 @@
 body {
   margin: var(--header-height) 0 0 0;
   padding: 1rem 1rem 0;
-  font-size: var(--normal-font-size);
-  background-color: #fff;
-  color: var(--text-color);
+  background-color: var(--main-body);
+  /* background-color: #0cbaba; */
 }
 
 h3 {
@@ -51,12 +43,14 @@ img {
   height: auto;
 }
 
+/* IMPLEMENT - TOP HEADER */
+
 .header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background: var(--body-color);
+  background: var(--white-color); /* white color */
   box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
   padding: 0 1rem;
   z-index: var(--z-fixed);
@@ -76,7 +70,6 @@ img {
 }
 
 .header__logo {
-  color: var(--title-color);
   font-weight: var(--font-medium);
   display: none;
 }
@@ -84,7 +77,7 @@ img {
 .header__search {
   display: flex;
   padding: 0.4rem 0.75rem;
-  background-color: #fff;
+  background-color: var(--white-color);
   border-radius: 0.25rem;
 }
 
@@ -92,12 +85,12 @@ img {
   width: 100%;
   border: none;
   outline: none;
-  background-color: #fff;
+  background-color: var(--white-color);
 }
 
 .header__input::placeholder {
   color: var(--text-color);
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .header__toggle,
@@ -105,10 +98,11 @@ img {
   font-size: 1.2rem;
 }
 
-.header__toggle {
-  color: var(--title-color);
-  cursor: pointer;
+.header__icon {
+  color: var(--text-color);
 }
+
+/* IMPLEMENT - SIDE-BAR */
 
 .nav {
   position: fixed;
@@ -116,7 +110,6 @@ img {
   left: -100%;
   height: 100vh;
   padding: 1rem;
-  background-color: var(--body-color);
   box-shadow: 1px 0 0 rgba(22, 8, 43, 0.1);
   z-index: var(--z-fixed);
   transition: 0.5s;
@@ -159,17 +152,11 @@ img {
   font-size: var(--normal-font-size);
   text-transform: uppercase;
   letter-spacing: 0.1rem;
-  color: var(--text-color-light);
 }
 
 .nav__link {
   display: flex;
   align-items: center;
-  color: var(--text-color);
-}
-
-.nav__link:hover {
-  color: var(--first-color);
 }
 
 .nav__icon {
@@ -186,11 +173,6 @@ img {
 
 .nav.show-menu {
   left: 0;
-}
-
-.active {
-  color: var(--first-color);
-  font-weight: bold;
 }
 
 .nav__logo-name {
@@ -210,7 +192,7 @@ img {
   font-family: "Merienda", cursive;
   letter-spacing: 2px;
   font-size: 17.5px;
-  color: #fff;
+  color: var(--white-color);
   background-color: rgb(54, 54, 197);
   padding: 4px 6px;
   text-align: center;
@@ -222,7 +204,7 @@ img {
 .text__color,
 .nav__name,
 .nav__icon {
-  color: #fff;
+  color: var(--white-color);
 }
 
 /* SUB-MENU */
@@ -234,7 +216,7 @@ img {
 .sub-menu .sub__menu__item {
   display: flex;
   align-items: center;
-  color: #fff;
+  color: var(--white-color);
   font-weight: bold;
   font-size: 16px;
 }
@@ -244,7 +226,7 @@ img {
 }
 
 .sub-icon.active::before {
-  color: #fff;
+  color: var(--white-color);
   font-size: 16px;
   font-weight: bold;
   content: "\f077";
@@ -258,11 +240,8 @@ img {
   background: linear-gradient(to left, #ff4331, #d31a50);
 }
 
-.nav__link:hover {
-  color: var(--first-color);
-}
+/* IMPLEMENT - MAIN BODY */
 
-/* main body */
 .main__body {
   position: relative;
 }
@@ -275,7 +254,7 @@ img {
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   overflow-y: auto;
-  background-color: var(--body-color);
+  background-color: var(--white-color);
 }
 
 .card__container .card {
@@ -285,7 +264,7 @@ img {
   margin: 5px 5px;
   line-height: 1.5;
   font-size: 0.9em;
-  padding: 10px;
+  padding: 11px;
 }
 
 .card__container .card .card__details {
@@ -313,7 +292,7 @@ img {
   justify-content: center;
   align-items: center;
   min-height: 60px;
-  color: #fff;
+  color: var(--white-color);
   font-size: 20px;
   cursor: pointer;
 }
@@ -327,7 +306,7 @@ img {
 
 .card .card__header {
   font-size: 19.5px;
-  color: rgb(27, 22, 22);
+  color: #d31a50;
   line-height: 1.3;
   letter-spacing: 0.5px;
   font-weight: 600;
@@ -366,7 +345,7 @@ img {
 
 .parents__name::-webkit-scrollbar-track,
 .card .card__msg::-webkit-scrollbar-track {
-  background: #fff;
+  background: var(--white-color);
   border-radius: 50px;
 }
 
@@ -400,7 +379,7 @@ img {
   background-color: crimson;
   font-size: 14px;
   font-weight: 500;
-  color: #fff;
+  color: var(--white-color);
   border-radius: 10px;
   cursor: pointer;
   letter-spacing: 1px;
@@ -484,7 +463,7 @@ img {
   outline: none;
   border: none;
   background: crimson;
-  color: #fff;
+  color: var(--white-color);
   padding: 8px 20px;
   font-size: 16px;
   font-weight: 500;
@@ -524,6 +503,7 @@ img {
   font-weight: bold;
   pointer-events: none;
   letter-spacing: 0.5px;
+  color: var(--text-color);
 }
 
 /* SEND EMAIL POP-UP */
@@ -591,7 +571,7 @@ img {
 .email__checkbox {
   height: 20px;
   width: 20px;
-  background-color: #fff;
+  background-color: var(--white-color);
   margin-right: 10px;
   cursor: pointer;
   border: none;
@@ -665,7 +645,7 @@ img {
   .nav {
     left: 0;
     padding: 1.2rem 1.5rem 3rem;
-    width: 85px;
+    width: 88px;
   }
 
   .nav__items {
@@ -738,7 +718,7 @@ img {
   }
 
   .send__mail::-webkit-scrollbar-track {
-    background: #fff;
+    background: var(--white-color);
     border-radius: 50px;
   }
 
@@ -761,7 +741,7 @@ img {
 
   .overlay,
   .overlay2 {
-    height: auto;
+    height: 100%;
   }
 }
 
@@ -778,5 +758,9 @@ img {
 
   .card__container {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .close__heading h3 {
+    font-size: 20px;
   }
 }
