--- a/common/style.css
+++ b/common/style.css
@@ -6,7 +6,7 @@
   --header-height: 3.5rem;
   --nav-width: 220px;
 
-  --title-color: #19181b;
+  --title-color: #37343d;
   --text-color: #464549;
   --text-color-light: #a5a1aa;
   --white-color: #fff;
